Authink.Web/Assets/Style/home.css
/* ... */
                #child-menu-info-menu ul li {
                    float: none;
                    white-space: nowrap;
                    /*width: 100%;*/
                    width: 295px;
                    padding: 6px 0 6px 20px;
                    background: #f8f8f8;
                    color: #444;
                    text-decoration: none;
                    border-top: 1px solid #f2f2f2;
                }

                    #child-menu-info-menu ul li:hover {
                        /*background: #93c6e0;*/
                        background: #feb645;
                        cursor: pointer;
                    }
                     #child-menu-info-menu ul li.child-menu-info-menu-selected {
                         background: #feb645;
                    }

                        #child-menu-info-menu ul li:last-child {
                            border-bottom: 4px solid #d8d8d8;
                            background: #196d96;
                        }
                        #child-menu-info-menu ul li:last-child:hover {
                            background: #2277a4;
                        }
                            #child-menu-info-menu ul li:last-child span {
                                text-transform: uppercase;
                                font-weight: bolder;
                                color: white;
                                margin-left: 67px;
                            }

                    #child-menu-info-menu ul li span {
                        margin-left: 10px;
                        font-size: 0.6em;
                        font-weight: normal;
                    }

    #child-menu-edit-button {
        display: block; float: right; position: relative;
        width: 120px; height: 120px;
        background: transparent url('../Images/Home/child-button-edit.png') no-repeat center 35px;
            color: #a4a4a4;
    }

        #child-menu-edit-button:hover {
            cursor: pointer;
            /*background: #e8e8e8 url('../Images/Home/child-button-edit-hover.png') no-repeat center 35px;*/
            background: #e8e8e8 url('../Images/Home/child-button-edit.png') no-repeat center 35px;
            /*color: #3c3c3c;*/
        }

        #child-menu-edit-button span {
            display: block;
            position: absolute;
            bottom: 0px;
            width: 100%;
            text-align: center;
            font-size: 1.2em;
            text-transform: uppercase;
            padding-bottom: 25px;
            /*color: #888;*/
        }

/* MAIN */

#main-container {
    
}
    #main-tests {
        width: 426px;
        float: left;
        border-right: 5px solid #ececec;
        background: #f8f8f8;
    }

        #main-tests-heading {
            text-transform: uppercase;
            font-size: 2.1em; font-weight: bold;
            padding: 15px 10px;

        }

        #main-tests-search {
            padding: 10px 60px 10px 10px;
        }

            #main-tests-search-field {
                width: 100%; padding: 8px 5px 8px 35px;
                border: 1px solid #ececec;
                /*color: #d5d5d5;*/
                background: white url('../Images/Home/search-icon.png') no-repeat 10px center;
                outline: none;
            }
            /*FUBAR*/
            #main-tests-search input::-webkit-input-placeholder {
               color: #d5d5d5;
            }
            #main-tests-search input:-moz-placeholder { /* Firefox 18- */
               color: #d5d5d5;  
            }
            #main-tests-search input::-moz-placeholder {  /* Firefox 19+ */
               color: #d5d5d5;  
            }
            #main-tests-search input:-ms-input-placeholder {  
               color: #d5d5d5;  
            }
            /**/
        #main-tests-list {

        }

            .main-tests-list-item {
                margin: 10px;
                padding: 5px 10px 10px 10px;
                color: #888;
            }

                .main-tests-list-item:hover {
                    cursor: pointer;
                    /*background: #feaa26;*/
                    background-color: #feb645;
                    color: #3e3e3e;
                }

                .main-tests-list-item-selected {
                    background-color: #fe9b26;
                }

                    .main-tests-list-item-selected > .main-tests-list-item-info h1 {
                        color: white !important;
                    }

                    .main-tests-list-item-selected > .main-tests-list-item-info span {
                        color: white !important;
                    }

                .main-tests-list-item-image {
                    display: block; float: left;
                    width: 50px; height: 50px;
                }

                .main-tests-list-item-info {
                    width: 320px;
                }

                    .main-tests-list-item-info h1 {
                        font-size: 1.8em; font-weight: bold;
                        color: #444;
                        margin-bottom: 4px;
                    }

                    .main-tests-list-item-info span {
                        font-size: 1.3em;
                        /*color: #888;*/
                    }

        #main-tests-options {
            padding: 10px;
        }

            #main-tests-option-add-new {
                display: block; padding: 15px 0;
                text-align: center; text-transform: uppercase;
                background: #196d96;
                color: white;
                border-bottom: 5px solid #0f5273;
                font-size: 1.8em; font-weight: bold;
                text-decoration: none;
            }

                #main-tests-option-add-new:hover {
                    cursor: pointer;
                    background: #2277a4;   
                }
/* ... */

